--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
+	title = 'Rakan Aljarallah: Software Engineer & Game Developer',
+	description = 'Software Engineer specializing in Back-End Technology, Game Development with Unity, 3D Modeling & Metaverse Integration.',
 } = Astro.props;
 ---
 
