--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -28,7 +28,7 @@ const isCurrentPage = (href: string) => {
 	return pathname === href || (href !== '/' && pathname.startsWith(href));
 };
 
-const { title = "your name", description = "your description" } = Astro.props;
+const { title = "Rakan Aljarallah", description = "your description" } = Astro.props;
 ---
 
 <nav>
